--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,7 +25,7 @@
 }
 
 html {
-  height: 100%
+  height: 100%;
 }
 
 html,
@@ -38,6 +38,7 @@ body {
   color: var(--foreground);
   background-color: var(--background);
   height: -webkit-fill-available;
+  scroll-behavior: smooth;
 }
 
 main {
@@ -82,7 +83,7 @@ h2::after {
   content:'';
   position:absolute;
   width:64px;
-  height:1px;
+  height:2px;
   background:var(--headline);
   bottom:0;
   left:0;
