--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -1,91 +1,80 @@
 .main {
-    display: flex;  
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .header {
-    position: fixed;
-    width: 100%;
-    z-index:1000;
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
 }
 
-
-
+.textLogo {
+  font-size: 1.5rem;
+  font-weight: 400;
+  font-size: 17px;
+  text-transform: uppercase;
+  letter-spacing: 3.4px;
+}
 
 /* navigation desktop */
 @media screen and (min-width: 801px) {
-    .header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        height: var(--header-height);
-        background-color: white;
-        box-shadow: 0 0 10px #85888C;
-        /* position: fixed; */
-        top: 0;
-        /* width: 100%; */
-        z-index: 1000;
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: var(--header-height);
+    background-color: white;
+    box-shadow: 0 0 10px #85888c;
+    /* position: fixed; */
+    top: 0;
+    /* width: 100%; */
+    z-index: 1000;
+  }
+
+  .menu {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .input {
+    display: none;
+  }
+
+  .nav {
+    position: fixed;
+    top: 0;
+    height: var(--header-height);
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    & li {
+      margin: 0 16px;
+    }
+  }
+
+  .spaces {
+    padding: 0 16px;
+
+    @media screen and (min-width: 800px) {
+      padding: 0 16px;
     }
 
-    .menu {
-        display: flex;
-        flex-direction: row;
-
-
+    @media screen and (min-width: 1200px) {
+      padding: 0 64px;
     }
-
-    .input {
-        display: none;
-    }
-
-    .nav {
-        position: fixed;
-        top: 0;
-        height: var(--header-height);
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    
-        & li {
-            margin: 0 16px;
-        }
-    
-   
-    
-    }
-
-    .spaces {
-        padding: 0 16px;
-
-        @media screen and (min-width: 800px) {
-            padding: 0 16px;
-        }; 
-    
-        @media screen and (min-width: 1200px) {
-            padding: 0 64px;
-        }
-    }
-
-    .textLogo {
-        font-size: 1.5rem;
-        font-weight: 400;
-        font-size:17px;
-        text-transform: uppercase;
-        letter-spacing: 3.4px;
-    }
-
-
-    
-}  
+  }
+}
 
 /* navigation mobile */
-@media screen and (max-width: 800px){   
+@media screen and (max-width: 800px) {
   .navMobile {
     background-color: white;
     height: 65px;
   }
-  
+
   .menuToggle {
     display: flex;
     flex-direction: column;
@@ -97,7 +86,7 @@
     -webkit-user-select: none;
     user-select: none;
   }
-  
+
   .menuToggle input {
     display: flex;
     width: 40px;
@@ -107,7 +96,7 @@
     opacity: 0;
     z-index: 2;
   }
-  
+
   .menuToggle span {
     display: flex;
     width: 29px;
@@ -118,54 +107,53 @@
     border-radius: 3px;
     z-index: 1;
     transform-origin: 5px 0px;
-    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-                background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-                opacity 0.55s ease;
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+      background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
   }
-  
+
   .menuToggle span:first-child {
     transform-origin: 0% 0%;
   }
-  
+
   .menuToggle span:nth-last-child(2) {
     transform-origin: 0% 100%;
   }
-  
+
   .menuToggle input:checked ~ span {
     opacity: 1;
     transform: rotate(45deg) translate(-3px, -1px);
-    background: #36383F;
+    background: #36383f;
   }
   .menuToggle input:checked ~ span:nth-last-child(3) {
     opacity: 0;
     transform: rotate(0deg) scale(0.2, 0.2);
   }
-  
+
   .menuToggle input:checked ~ span:nth-last-child(2) {
     transform: rotate(-45deg) translate(0, -1px);
   }
-  
+
   .menu {
     position: absolute;
     width: 80%;
     height: 100vh;
-    box-shadow: 0 0 10px #85888C;
-    margin: -24px -24px 0 0 ;
+    box-shadow: 0 0 10px #85888c;
+    margin: -24px -24px 0 0;
     padding: 50px;
     padding-top: 125px;
-    background-color: #F5F6FA;
+    background-color: #f5f6fa;
     -webkit-font-smoothing: antialiased;
     transform-origin: 0% 0%;
     transform: translate(150%, 0);
-    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
   }
-  
+
   .menu li {
     padding: 10px 0;
     transition-delay: 2s;
   }
-  
+
   .menuToggle input:checked ~ ul {
     transform: none;
   }
-}  
+}
