--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,57 +1,114 @@
 .container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.backgroundLayer {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-
-}
-
-.image {
-    object-fit: cover;
+.section {
+  position: relative;
+  width: 100%;
 }
 
 .content {
-    height: 100%;
-    width: 100%;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    overflow: scroll;
+  height: 100%;
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: scroll;
 }
 
 .smallBox {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: rgba(255, 255, 255, 0.8);
-    width: 100%;
-    max-width: 540px;
-    padding: 24px;
-    text-align: right;
-    margin: 20vh 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: rgba(255, 255, 255, 0.8);
+  width: 100%;
+  max-width: 600px;
+  padding: 24px;
+  text-align: right;
+  margin: 20vh 0;
+}
+
+.imageContainer {
+  object-fit: cover;
 }
 
 .bigBox {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: rgba(255, 255, 255, 1);
-    width: 100%;
-    padding: 24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: rgba(255, 255, 255, 1);
+  width: 100%;
+  padding: 64px 16px;
+  flex: 1;
 }
 
 .bigBoxContent {
-    width:100%;
-    max-width: 1024px;
-    margin: auto;
+  width: 100%;
+  max-width: 1024px;
+  margin: auto;
 }
 
+.greyBackground {
+  background-color: #f5f5f5;
+}
+
+.offerNav {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+
+  @media screen and (min-width: 360px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  /* display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center; */
+
+  @media screen and (min-width: 801px) {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+.offerItemWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  & li {
+    margin: 8px 0;
+  }
+}
+
+.offerNavImage {
+  border-radius: 50%;
+}
+
+.workFocusLayout {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  margin-bottom: 24px;
+
+  & li {
+    flex-grow: 1;
+    border: 1px solid grey;
+    border-radius: 8px;
+    padding: 8px;
+    text-align: center;
+  }
+
+  & li:nth-child(even) {
+    border: 1px solid #dfe1e0;
+    background-color: #dfe1e0;
+  }
+  & li:nth-child(odd) {
+    border: 1px solid #b4c6d0;
+    background-color: #b4c6d0;
+  }
+}
