--- a/src/app/contact/page.module.css
+++ b/src/app/contact/page.module.css
@@ -20,7 +20,7 @@
   position: absolute;
   width: 64px;
   height: 2px;
-  background: var(--headline);
+  background: var(--headline-blue);
   bottom: 0;
   left: 0;
   right: 0;
