--- a/src/components/image/image.module.css
+++ b/src/components/image/image.module.css
@@ -1,3 +1,7 @@
-.parallaxImage {
-  object-fit: cover;
+.container {
+  position: absolute;
+  width: 100%;
+  max-width: 100vw;
+  height: 100%;
+  max-height: 50vh;
 }
